# MiniKernelLibrary

./: CMakeLists.txt  README.md
include/runtime/: Tensor.h  Tools.h
kernels/: CMakeLists.txt
src/: CMakeLists.txt
src/runtime/: CMakeLists.txt  Tensor.cpp  Tools.cpp
